Add a log file and add test java arguments in LogReader.java